--- a/todo.txt
+++ b/todo.txt
@@ -14,12 +14,12 @@ Do syntax highlighting based on the file type
 Highlight brace pairs
 Show errors for unclosed braces !!AND IGNORE ONES IN STRINGS/CHARS/COMMENTS!!
 Smooth cursor movement
-Implement proper scrolling where cursor isn't locked to the center
-Smooth scrolling
 Make Shift+Enter insert a new line before the one you're on
 Fix high cpu usage <-- Implement font atlas
 Scrolling horizontally
 Make shift+tab append a tab at the beginning
-Rewrite buffer.h to accepts cursor positions and manage the cursor as an extra API instead of primary
+Rewrite buffer.h to accept cursor positions and manage the cursor as an extra API instead of primary
 Allow to change font sizes
 Extracting position/size SDL_Point from SDL_Rect
+Align putting cursor using mouse to rounded character offset (x direction)
+Fix putting cursor using mouse for non monospace fonts!
