--- a/todo.txt
+++ b/todo.txt
@@ -22,3 +22,4 @@ Handle unsuccessful file write
 CTRL+Alt+C and other operations that will copy content in parentheses enclosed near cursor
 Handle vertical scrolling with account to non monospace fonts
 Add lil braces around cursors when you are selecting
+Fix double indent for double wrapped parentheses
