That's it for today!

--- a/todo.txt
+++ b/todo.txt
@@ -19,7 +19,8 @@ Use `to` as the cursor not `from`
 Double tap to select a word
 Triple tap to select the whole line
 Handle unsuccessful file write
-CTRL+Alt+C and other operations that will copy content in parentheses enclosed near cursor
+CTRL+Shift+C and other operations that will copy content in parentheses enclosed near cursor, including parentheses
 Handle vertical scrolling with account to non monospace fonts
 Add lil braces around cursors when you are selecting
 Fix double indent for double wrapped parentheses
+Wrap braces to next line when you press newline near closing brace
