--- a/todo.txt
+++ b/todo.txt
@@ -27,3 +27,4 @@ Investigate crashes with zero width/height
 Font fallbacks 
 Handle tab symbol rendering
 Use tabs in makefiles
+Zoom in into center instead of line 0
